[SD-502] Fixing PDP arrows position and visibility on tablet

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
@@ -5,19 +5,20 @@
     @mixin arrow {
       top: 0;
       width: $arrow-width;
+      z-index: 1;
     }
     &--previous {
       left: -$arrow-width;
       @include arrow;
       @include media-breakpoint-between(md, md) {
-        left: 0;
+        left: 15px;
       }
     }
     &--next {
       right: -$arrow-width;
       @include arrow;
       @include media-breakpoint-between(md, md) {
-        right: 0;
+        right: 15px;
       }
     }
     &-rounded {
